--- a/src/main/resources/com/example/autoluxe/vista_empleadosyroles.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_empleadosyroles.fxml
@@ -68,7 +68,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button layoutX="10.0" layoutY="159.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="280.0" style="-fx-cursor: hand;" text="Gestión de clientes" textFill="WHITE">
+                        <Button layoutX="10.0" layoutY="159.0" mnemonicParsing="false" onAction="#abrirClientes" prefHeight="40.0" prefWidth="280.0" style="-fx-cursor: hand;" text="Gestión de clientes" textFill="WHITE">
                            <font>
                               <Font size="16.0" />
                            </font>
