--- a/src/main/resources/style/estilo_app.css
+++ b/src/main/resources/style/estilo_app.css
@@ -36,14 +36,14 @@
 #btnAnadir:hover, #btnEdicion:hover,#btnAnadir1:hover, #btnEdicion1:hover,#submenu .button:hover,#submenu1 .button:hover,#submenu2 .button:hover,#submenu3 .button:hover {
     -fx-font-weight: bold;
 }
-#acAnadir,#acEditar,#acAnadir1,#acEditar1
+#acAnadir,#acEditar,#acAnadir1,#acEditar1,#acAnadir2
 {
     -fx-background-color: #FFA423;
     -fx-text-fill: white;
     -fx-border-radius: 10px;
     -fx-background-radius: 10px;
 }
-#acAnadir:hover,#acEditar:hover,#acAnadir1:hover,#acEditar1:hover
+#acAnadir:hover,#acEditar:hover,#acAnadir1:hover,#acEditar1:hover,#acAnadir2:hover
 {
     -fx-background-color: #ffffff;
     -fx-text-fill: #FFA423;
@@ -52,7 +52,7 @@
     -fx-border-color: #FFA423;
     -fx-border-width: 1px;
 }
-#acAnadir:pressed,#acEditar:pressed,#acAnadir1:pressed,#acEditar1:pressed
+#acAnadir:pressed,#acEditar:pressed,#acAnadir1:pressed,#acEditar1:pressed,#acAnadir2:pressed
 {
     -fx-background-color: #FFA423;
     -fx-text-fill: white;
@@ -76,6 +76,27 @@
 #acBorrar:pressed,#acBorrar1:pressed
 {
     -fx-background-color: #ff0000;
+    -fx-text-fill: white;
+}
+#acFacturar
+{
+    -fx-background-color: #a3ff72;
+    -fx-text-fill: #000000;
+    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
+}
+#acFacturar:hover
+{
+    -fx-background-color: #ffffff;
+    -fx-text-fill: #000000;
+    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
+    -fx-border-color: #000000;
+    -fx-border-width: 1px;
+}
+#acFacturar:pressed
+{
+    -fx-background-color: #000000;
     -fx-text-fill: white;
 }
 .button
