--- a/src/main/resources/com/example/autoluxe/vista_inicio.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_inicio.fxml
@@ -86,7 +86,7 @@
                                         </ImageView>
                                     </graphic>
                                 </Button>
-                                <Button layoutX="10.0" layoutY="322.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="280.0" text="Generar factura" textFill="WHITE">
+                                <Button layoutX="10.0" layoutY="322.0" mnemonicParsing="false" onAction="#abrirFacturas" prefHeight="40.0" prefWidth="280.0" text="Generar factura" textFill="WHITE">
                                     <font>
                                         <Font size="16.0" />
                                     </font>
@@ -163,7 +163,7 @@
                                  <font>
                                     <Font name="Balance Groovy" size="48.0" />
                                  </font></Button>
-                              <Button layoutX="60.0" layoutY="432.0" mnemonicParsing="false" prefHeight="249.0" prefWidth="400.0" text="FACTURAS">
+                              <Button layoutX="60.0" layoutY="432.0" mnemonicParsing="false" onAction="#abrirFacturas" prefHeight="249.0" prefWidth="400.0" text="FACTURAS">
                                  <font>
                                     <Font name="Balance Groovy" size="48.0" />
                                  </font></Button>
