--- a/src/main/resources/com/example/autoluxe/vista_clientes.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_clientes.fxml
@@ -92,7 +92,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button layoutX="10.0" layoutY="322.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="280.0" text="Generar factura" textFill="WHITE">
+                        <Button layoutX="10.0" layoutY="322.0" mnemonicParsing="false" onAction="#abrirFacturas" prefHeight="40.0" prefWidth="280.0" text="Generar factura" textFill="WHITE">
                            <font>
                               <Font size="16.0" />
                            </font>
