--- a/src/main/resources/com/example/autoluxe/vista_tareas.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_tareas.fxml
@@ -93,7 +93,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button layoutX="10.0" layoutY="322.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="280.0" text="Generar factura" textFill="WHITE">
+                        <Button layoutX="10.0" layoutY="322.0" mnemonicParsing="false" onAction="#abrirFacturas" prefHeight="40.0" prefWidth="280.0" text="Generar factura" textFill="WHITE">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -257,13 +257,25 @@
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
                               </Label>
-                              <TextField layoutX="135.0" layoutY="198.0" prefHeight="30.0" prefWidth="280.0" />
+                              <TextField layoutX="135.0" layoutY="198.0" prefHeight="30.0" prefWidth="200.0" />
                               <Label alignment="CENTER" layoutX="921.0" layoutY="104.0" prefHeight="47.0" prefWidth="103.0" text="TAREAS" textAlignment="CENTER">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="24.0" />
                                  </font>
                               </Label>
                               <Line endX="559.0" layoutX="1022.0" layoutY="160.0" startX="-100.0" />
+                              <Button fx:id="btnBuscar111" layoutX="335.0" layoutY="197.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="80.0" style="-fx-background-color: #000000;">
+                                 <font>
+                                    <Font name="Microsoft Sans Serif" size="14.0" />
+                                 </font>
+                                 <graphic>
+                                    <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../imagenes/lupa.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
                            </children>
                         </Pane>
                         <Pane fx:id="panelCuerpo" prefHeight="800.0" prefWidth="1620.0" stylesheets="@../../../style/estilo_app.css">
