--- a/src/main/resources/style/estilo_app.css
+++ b/src/main/resources/style/estilo_app.css
@@ -87,7 +87,7 @@
 }
 #acFacturar:hover
 {
-    -fx-background-color: #ffffff;
+    -fx-background-color: #a3ff72;
     -fx-text-fill: #000000;
     -fx-border-radius: 10px;
     -fx-background-radius: 10px;
@@ -95,6 +95,30 @@
     -fx-border-width: 1px;
 }
 #acFacturar:pressed
+{
+    -fx-background-color: #000000;
+    -fx-text-fill: #a3ff72;
+}
+#acCambio
+{
+    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
+    -fx-border-color: #000000;
+    -fx-background-color: #ffffff;
+    -fx-text-fill: #000000;
+    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
+}
+#acCambio:hover
+{
+    -fx-background-color: #ffffff;
+    -fx-text-fill: #000000;
+    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
+    -fx-border-color: #000000;
+    -fx-border-width: 1px;
+}
+#acCambio:pressed
 {
     -fx-background-color: #000000;
     -fx-text-fill: white;
