--- a/src/main/resources/com/example/autoluxe/vista_InicioSesion.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_InicioSesion.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -14,7 +15,7 @@
 
 <HBox alignment="TOP_CENTER" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.autoluxe.ControladorInicioSesion">
    <children>
-      <AnchorPane prefHeight="1000.0" prefWidth="1920.0" style="-fx-background-color: #666666;">
+      <AnchorPane fx:id="contenedor" prefHeight="1000.0" prefWidth="1920.0" style="-fx-background-color: #666666;">
          <children>
             <Pane fx:id="barraSuperior" layoutX="-5.0" layoutY="-19.0" prefHeight="200.0" prefWidth="1927.0" stylesheets="@../../../style/estilo_inicio-sesion.css">
                <children>
@@ -97,6 +98,9 @@
                            <font>
                               <Font name="Microsoft New Tai Lue Bold" size="14.0" />
                            </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Button>
                      </children>
                   </Pane>
