--- a/src/main/resources/com/example/autoluxe/vista_inicio.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_inicio.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -12,7 +13,7 @@
 
 <HBox alignment="TOP_CENTER" prefHeight="1000.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_app.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.autoluxe.ControladorEmpleadosYRoles">
     <children>
-        <AnchorPane prefHeight="1000.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_app.css" HBox.hgrow="ALWAYS">
+        <AnchorPane fx:id="contenedor" prefHeight="1000.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_app.css" HBox.hgrow="ALWAYS">
             <children>
                 <Pane fx:id="barraSuperior" prefHeight="200.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_inicio-sesion.css">
                     <children>
@@ -130,10 +131,13 @@
                                         <Font size="14.0" />
                                     </font>
                                 </Label>
-                                <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="37.0" layoutY="715.0" pickOnBounds="true" preserveRatio="true">
+                                <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="37.0" layoutY="715.0" onMouseClicked="#mostrarNuevaVista" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@../../../imagenes/usuario.png" />
                                     </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                                 </ImageView>
                                 <Button alignment="CENTER" layoutX="10.0" layoutY="452.0" mnemonicParsing="false" onAction="#abrirTareas" prefHeight="40.0" prefWidth="280.0" style="-fx-cursor: hand;" text="Administración de tareas" textFill="WHITE">
                                     <font>
@@ -159,7 +163,7 @@
                                  <font>
                                     <Font name="Balance Groovy" size="36.0" />
                                  </font></Button>
-                              <Button layoutX="610.0" layoutY="61.0" mnemonicParsing="false" onAction="#abrirClientes" prefHeight="249.0" prefWidth="400.0" text="CLIENTES">
+                              <Button fx:id="btnClientes" layoutX="610.0" layoutY="61.0" mnemonicParsing="false" onAction="#abrirClientes" prefHeight="249.0" prefWidth="400.0" text="CLIENTES">
                                  <font>
                                     <Font name="Balance Groovy" size="48.0" />
                                  </font></Button>
