--- a/src/main/resources/style/estilo_app.css
+++ b/src/main/resources/style/estilo_app.css
@@ -123,7 +123,7 @@
     -fx-background-color: #000000;
     -fx-text-fill: white;
 }
-.button
+.button, #btnCorreo,#btnCuenta
 {
     -fx-cursor: hand;
 }
