--- a/src/main/resources/com/example/autoluxe/vista_perfil.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_perfil.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="TOP_CENTER" prefHeight="1000.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_app.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.autoluxe.ControladorPerfil">
+<HBox alignment="TOP_CENTER" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_app.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.autoluxe.ControladorPerfil">
    <children>
-      <AnchorPane fx:id="contenedor" prefHeight="1000.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_app.css" HBox.hgrow="ALWAYS">
+      <AnchorPane fx:id="contenedor" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_app.css" HBox.hgrow="ALWAYS">
          <children>
             <Pane fx:id="barraSuperior" prefHeight="200.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_inicio-sesion.css">
                <children>
@@ -37,9 +37,9 @@
                   </ImageView>
                </children>
             </Pane>
-            <BorderPane layoutY="200.0" prefHeight="800.0" prefWidth="1920.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="200.0">
+            <BorderPane layoutY="200.0" prefHeight="880.0" prefWidth="1920.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="200.0">
                <left>
-                  <Pane fx:id="panelLateralMenu" prefHeight="800.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+                  <Pane fx:id="panelLateralMenu" prefHeight="880.0" prefWidth="300.0" BorderPane.alignment="CENTER">
                      <children>
                         <Button fx:id="btnInicio" layoutX="12.0" layoutY="21.0" mnemonicParsing="false" onAction="#abrirInicio" text="Inicio" textFill="WHITE">
                            <font>
@@ -128,12 +128,12 @@
                               <Font size="20.0" />
                            </font>
                         </Label>
-                        <Label layoutX="103.0" layoutY="725.0" text="Correo electrónico">
+                        <Label fx:id="btnCorreo" layoutX="103.0" layoutY="725.0" onMouseClicked="#abrirPerfil" text="Correo electrónico">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="37.0" layoutY="715.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="btnCuenta" fitHeight="40.0" fitWidth="40.0" layoutX="37.0" layoutY="715.0" onMouseClicked="#abrirPerfil" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../imagenes/usuario.png" />
                            </image>
@@ -154,9 +154,9 @@
                   </Pane>
                </left>
                <center>
-                  <Pane prefHeight="800.0" prefWidth="1620.0" stylesheets="@../../../style/estilo_perfil.css" BorderPane.alignment="CENTER">
+                  <Pane prefHeight="880.0" prefWidth="1620.0" stylesheets="@../../../style/estilo_perfil.css" BorderPane.alignment="CENTER">
                      <children>
-                        <Pane fx:id="panelCuenta" prefHeight="800.0" prefWidth="1620.0">
+                        <Pane fx:id="panelCuenta" prefHeight="880.0" prefWidth="1620.0">
                            <children>
                               <Label layoutX="136.0" layoutY="343.0">
                                  <font>
@@ -171,7 +171,7 @@
                                     <Font name="Microsoft New Tai Lue Bold" size="48.0" />
                                  </font>
                               </Label>
-                              <Button fx:id="btnCerrarSesion" layoutX="437.0" layoutY="678.0" mnemonicParsing="false" onMouseClicked="#cerrarVentana" prefHeight="44.0" prefWidth="600.0" text="Cerrar sesión">
+                              <Button fx:id="btnCerrarSesion1" layoutX="437.0" layoutY="678.0" mnemonicParsing="false" onMouseClicked="#cerrarVentana" prefHeight="44.0" prefWidth="600.0" text="Cerrar sesión">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="14.0" />
                                  </font>
@@ -227,7 +227,7 @@
                               <URL value="@../../../style/estilo_perfil.css" />
                            </stylesheets>
                         </Pane>
-                        <Pane fx:id="panelCuenta2" prefHeight="800.0" prefWidth="1620.0" visible="false">
+                        <Pane fx:id="panelCuenta2" prefHeight="880.0" prefWidth="1620.0">
                            <children>
                               <Label alignment="CENTER" layoutX="490.0" layoutY="51.0" prefHeight="72.0" prefWidth="492.0" text="Mi cuenta" textAlignment="CENTER">
                                  <font>
@@ -292,7 +292,7 @@
                                     <Font name="Microsoft New Tai Lue Bold" size="14.0" />
                                  </font>
                               </Button>
-                              <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="btnVolver" fitHeight="32.0" fitWidth="32.0" layoutX="14.0" layoutY="14.0" onMouseClicked="#abrirMiCuenta" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../../imagenes/volver-atras.png" />
                                  </image>
