--- a/src/main/resources/com/example/autoluxe/vista_inicio.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_inicio.fxml
@@ -63,7 +63,7 @@
                                         </ImageView>
                                     </graphic>
                                 </Button>
-                                <Button layoutX="10.0" layoutY="159.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="280.0" style="-fx-cursor: hand;" text="Gestión de clientes" textFill="WHITE">
+                                <Button layoutX="10.0" layoutY="159.0" mnemonicParsing="false" onAction="#abrirClientes" prefHeight="40.0" prefWidth="280.0" style="-fx-cursor: hand;" text="Gestión de clientes" textFill="WHITE">
                                     <font>
                                         <Font size="16.0" />
                                     </font>
@@ -75,7 +75,7 @@
                                         </ImageView>
                                     </graphic>
                                 </Button>
-                                <Button alignment="CENTER" layoutX="10.0" layoutY="199.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="280.0" style="-fx-cursor: hand;" text="Gestión de taller" textFill="WHITE">
+                                <Button alignment="CENTER" layoutX="10.0" layoutY="199.0" mnemonicParsing="false" onAction="#abrirTaller" prefHeight="40.0" prefWidth="280.0" style="-fx-cursor: hand;" text="Gestión de taller" textFill="WHITE">
                                     <font>
                                         <Font size="16.0" />
                                     </font>
@@ -179,7 +179,7 @@
                                  <font>
                                     <Font name="Balance Groovy" size="48.0" />
                                  </font></Button>
-                              <Button layoutX="1160.0" layoutY="62.0" mnemonicParsing="false" prefHeight="249.0" prefWidth="400.0" text="TALLER">
+                              <Button fx:id="abrirTaller" layoutX="1160.0" layoutY="62.0" mnemonicParsing="false" onAction="#abrirTaller" prefHeight="249.0" prefWidth="400.0" text="TALLER">
                                  <font>
                                     <Font name="Balance Groovy" size="48.0" />
                                  </font></Button>
