--- a/src/main/resources/com/example/autoluxe/vista_taller.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_taller.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
@@ -14,7 +13,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="TOP_CENTER" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_app.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.autoluxe.ControladorFacturas">
+<HBox alignment="TOP_CENTER" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_app.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.autoluxe.ControladorTaller">
    <children>
       <AnchorPane fx:id="contenedor" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../../../style/estilo_app.css" HBox.hgrow="ALWAYS">
          <children>
@@ -78,7 +77,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button alignment="CENTER" layoutX="10.0" layoutY="199.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="280.0" style="-fx-cursor: hand;" text="Gestión de taller" textFill="WHITE">
+                        <Button alignment="CENTER" layoutX="10.0" layoutY="199.0" mnemonicParsing="false" onAction="#abrirTaller" prefHeight="40.0" prefWidth="280.0" style="-fx-cursor: hand;" text="Gestión de taller" textFill="WHITE">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -168,7 +167,7 @@
                                                 <Image url="@../../../imagenes/herramientas.png" />
                                              </image>
                                           </ImageView>
-                                          <Pane layoutX="36.0" layoutY="37.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
+                                          <Pane fx:id="Elevador1" layoutX="36.0" layoutY="37.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
                                              <children>
                                                 <ImageView fitHeight="200.0" fitWidth="184.0" layoutX="103.0" layoutY="9.0" opacity="0.1" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -207,7 +206,7 @@
                                                 <Font name="Microsoft New Tai Lue Bold" size="24.0" />
                                              </font>
                                           </Label>
-                                          <Pane layoutX="456.0" layoutY="37.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
+                                          <Pane fx:id="Elevador2" layoutX="456.0" layoutY="37.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
                                              <children>
                                                 <ImageView fitHeight="200.0" fitWidth="184.0" layoutX="103.0" layoutY="9.0" opacity="0.1" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -246,7 +245,7 @@
                                                 <Font name="Microsoft New Tai Lue Bold" size="24.0" />
                                              </font>
                                           </Label>
-                                          <Pane layoutX="35.0" layoutY="284.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
+                                          <Pane fx:id="Elevador3" layoutX="35.0" layoutY="284.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
                                              <children>
                                                 <ImageView fitHeight="200.0" fitWidth="184.0" layoutX="103.0" layoutY="9.0" opacity="0.1" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -285,7 +284,7 @@
                                                 <Font name="Microsoft New Tai Lue Bold" size="24.0" />
                                              </font>
                                           </Label>
-                                          <Pane layoutX="455.0" layoutY="284.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
+                                          <Pane fx:id="Elevador4" layoutX="455.0" layoutY="284.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
                                              <children>
                                                 <ImageView fitHeight="200.0" fitWidth="184.0" layoutX="103.0" layoutY="9.0" opacity="0.1" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -324,7 +323,7 @@
                                                 <Font name="Microsoft New Tai Lue Bold" size="24.0" />
                                              </font>
                                           </Label>
-                                          <Pane layoutX="35.0" layoutY="533.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
+                                          <Pane fx:id="Elevador5" layoutX="35.0" layoutY="533.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
                                              <children>
                                                 <ImageView fitHeight="200.0" fitWidth="184.0" layoutX="103.0" layoutY="9.0" opacity="0.1" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -363,7 +362,7 @@
                                                 <Font name="Microsoft New Tai Lue Bold" size="24.0" />
                                              </font>
                                           </Label>
-                                          <Pane layoutX="455.0" layoutY="533.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
+                                          <Pane fx:id="Elevador6" layoutX="455.0" layoutY="533.0" prefHeight="200.0" prefWidth="390.0" style="-fx-background-color: white; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
                                              <children>
                                                 <ImageView fitHeight="200.0" fitWidth="184.0" layoutX="103.0" layoutY="9.0" opacity="0.1" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -417,8 +416,7 @@
                                     <Font name="Microsoft New Tai Lue Bold" size="48.0" />
                                  </font>
                               </Label>
-                              <ComboBox layoutX="888.0" layoutY="53.0" prefHeight="25.0" prefWidth="155.0" promptText="Seleccione cliente" />
-                              <Pane fx:id="panelEditarElevador" layoutX="1078.0" layoutY="158.0" prefHeight="617.0" prefWidth="496.0" style="-fx-background-color: white; -fx-border-radius: 10px; -fx-background-radius: 10px;">
+                              <Pane fx:id="panelEditarElevador" layoutX="1078.0" layoutY="158.0" prefHeight="617.0" prefWidth="496.0" style="-fx-background-color: white; -fx-border-radius: 10px; -fx-background-radius: 10px;" visible="false">
                                  <children>
                                     <Label alignment="CENTER" layoutX="64.0" layoutY="14.0" prefHeight="37.0" prefWidth="368.0" text="EDITAR ESTADO DEL ELEVADOR" textAlignment="CENTER">
                                        <font>
@@ -446,8 +444,8 @@
                                           <Font name="Microsoft Sans Serif" size="14.0" />
                                        </font>
                                     </Label>
-                                    <TextField editable="false" layoutX="278.0" layoutY="118.0" prefHeight="31.0" prefWidth="125.0" promptText="Número" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
-                                    <TextField editable="false" layoutX="278.0" layoutY="157.0" prefHeight="31.0" prefWidth="125.0" promptText="Estado" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
+                                    <TextField fx:id="tvNumeroElevador" editable="false" layoutX="278.0" layoutY="118.0" prefHeight="31.0" prefWidth="125.0" promptText="Número" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
+                                    <TextField fx:id="tvEstadoActual" editable="false" layoutX="278.0" layoutY="157.0" prefHeight="31.0" prefWidth="125.0" promptText="Estado" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
                                     <Label layoutX="64.0" layoutY="202.0" text="ACCIONES SOBRE EL ELEVADOR:">
                                        <font>
                                           <Font name="Microsoft Sans Serif" size="14.0" />
@@ -483,16 +481,16 @@
                                           <Font name="Microsoft Sans Serif" size="14.0" />
                                        </font>
                                     </Label>
-                                    <TextField editable="false" layoutX="174.0" layoutY="310.0" prefHeight="31.0" prefWidth="125.0" promptText="Matrícula" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
-                                    <TextField editable="false" layoutX="174.0" layoutY="349.0" prefHeight="31.0" prefWidth="125.0" promptText="Nombre" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
+                                    <TextField fx:id="tvMatricula" editable="false" layoutX="174.0" layoutY="310.0" prefHeight="31.0" prefWidth="125.0" promptText="Matrícula" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
+                                    <TextField fx:id="tvNombreCliente" editable="false" layoutX="174.0" layoutY="349.0" prefHeight="31.0" prefWidth="125.0" promptText="Nombre" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
                                     <Label layoutX="88.0" layoutY="464.0" text="Empleado:">
                                        <font>
                                           <Font name="Microsoft Sans Serif" size="14.0" />
                                        </font>
                                     </Label>
-                                    <TextField editable="false" layoutX="174.0" layoutY="389.0" prefHeight="31.0" prefWidth="125.0" promptText="DNI" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
-                                    <TextField layoutX="317.0" layoutY="310.0" prefHeight="31.0" prefWidth="100.0" promptText="Buscar vehículo" />
-                                    <Button fx:id="btnBuscar" layoutX="417.0" layoutY="310.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="31.0" style="-fx-background-color: #000000;">
+                                    <TextField fx:id="tvDNICliente" editable="false" layoutX="174.0" layoutY="389.0" prefHeight="31.0" prefWidth="125.0" promptText="DNI" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
+                                    <TextField fx:id="buscar" layoutX="317.0" layoutY="310.0" prefHeight="31.0" prefWidth="100.0" promptText="Buscar vehículo" visible="false" />
+                                    <Button fx:id="btnBuscar" layoutX="417.0" layoutY="310.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="31.0" style="-fx-background-color: #000000;" visible="false">
                                        <font>
                                           <Font name="Microsoft Sans Serif" size="14.0" />
                                        </font>
@@ -504,10 +502,10 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <TextField editable="false" layoutX="174.0" layoutY="458.0" prefHeight="31.0" prefWidth="125.0" promptText="DNI" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
-                                    <TextField editable="false" layoutX="174.0" layoutY="498.0" prefHeight="31.0" prefWidth="125.0" promptText="Nombre" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
-                                    <TextField layoutX="314.0" layoutY="457.0" prefHeight="31.0" prefWidth="100.0" promptText="Buscar empleado" />
-                                    <Button fx:id="btnBuscar1" layoutX="414.0" layoutY="457.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="31.0" style="-fx-background-color: #000000;">
+                                    <TextField fx:id="tvNombreEmpleado" editable="false" layoutX="174.0" layoutY="458.0" prefHeight="31.0" prefWidth="125.0" promptText="DNI" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
+                                    <TextField fx:id="tvDNIEmpleado" editable="false" layoutX="174.0" layoutY="498.0" prefHeight="31.0" prefWidth="125.0" promptText="Nombre" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: black; -fx-border-width: 0 0 1 0;" />
+                                    <TextField fx:id="buscar1" layoutX="314.0" layoutY="457.0" prefHeight="31.0" prefWidth="100.0" promptText="Buscar empleado" visible="false" />
+                                    <Button fx:id="btnBuscar1" layoutX="414.0" layoutY="457.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="31.0" style="-fx-background-color: #000000;" visible="false">
                                        <font>
                                           <Font name="Microsoft Sans Serif" size="14.0" />
                                        </font>
@@ -519,12 +517,12 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
-                                    <Button fx:id="acAccion" layoutX="266.0" layoutY="553.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="196.0" text="REALIZAR ACCIÓN">
+                                    <Button fx:id="acAccion" layoutX="266.0" layoutY="553.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="196.0" text="REALIZAR ACCIÓN" visible="false">
                                        <font>
                                           <Font name="Microsoft New Tai Lue Bold" size="14.0" />
                                        </font>
                                     </Button>
-                                    <Button fx:id="acCancelar" layoutX="38.0" layoutY="553.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="196.0" text="CANCELAR">
+                                    <Button fx:id="acCancelar" layoutX="38.0" layoutY="553.0" mnemonicParsing="false" onAction="#cerrarEditarElevador" prefHeight="31.0" prefWidth="196.0" text="CANCELAR" visible="false">
                                        <font>
                                           <Font name="Microsoft New Tai Lue Bold" size="14.0" />
                                        </font>
